--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Viljami <contact@viljamipeltola.com>",
     "description": "Testing ground for game logic.",
     "bin": {
-        "gamer": "./gamer.js"
+        "index": "./index.js"
     },
     "main": "./gamer.js",
     "repository": {
@@ -20,8 +20,14 @@
     "dependencies": {
         "connect": "2.14.x",
         "lodash": "2.4.x",
-        "requirejs": "*",
-        "three": "0.66.x"
+        "three": "0.66.x",
+	"backbone": "^1.1.2",
+    	"body-parser": "^1.6.7",
+    	"bootstrap": "^3.2.0",
+    	"express": "^4.8.7",
+    	"hogan.js": "^3.0.2",
+    	"jquery": "^2.1.1",
+    	"requirejs": "^2.1.14"
     },
     "analyze": false,
     "license": "MIT",
